tests/parsing/smtlib/v2.6/errors/027_let_unopened_var_binding_list_1.expected
File "tests/parsing/smtlib/v2.6/errors/027_let_unopened_var_binding_list_1.smt2", line 2, character 13-14:
2 | (assert (let _ true))
                 ^
Error while parsing a term, read the reserved word '_',
      but expected a variable binding list, starting with an opening
      parenthesis.
